--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
   "name": "terraform-module-service-kubernetes",
-  "version": "0.7.0",
+  "version": "0.8.0",
   "description": "",
   "scripts": {
     "release": "standard-version"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/edahlseng/terraform-module-service-kubernetes.git"
+    "url": "git+https://github.com/ShaperTools/terraform-module-service-kubernetes.git"
   },
-  "author": "Eric Dahlseng",
+  "author": "ShaperTools",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/edahlseng/terraform-module-service-kubernetes/issues"
+    "url": "https://github.com/ShaperTools/terraform-module-service-kubernetes/issues"
   },
-  "homepage": "https://github.com/edahlseng/terraform-module-service-kubernetes#readme",
+  "homepage": "https://github.com/ShaperTools/terraform-module-service-kubernetes#readme",
   "dependencies": {},
   "devDependencies": {
     "@eric.dahlseng/standard-version": "^1.1.0"
